@@ -53,17 +53,22 @@ m1.translate(5, 5, 0)
 m1.setGLOptions('additive')
 w.addItem(m1)
 
+
 ## Example 2:
 ## Array of vertex positions, three per face
+verts = np.empty((36, 3, 3), dtype=np.float32)
+theta = np.linspace(0, 2*np.pi, 37)[:-1]
+verts[:,0] = np.vstack([2*np.cos(theta), 2*np.sin(theta), [0]*36]).T
+verts[:,1] = np.vstack([4*np.cos(theta+0.2), 4*np.sin(theta+0.2), [-1]*36]).T
+verts[:,2] = np.vstack([4*np.cos(theta-0.2), 4*np.sin(theta-0.2), [1]*36]).T
+    
 ## Colors are specified per-vertex
-
-verts = verts[faces]  ## Same mesh geometry as example 2, but now we are passing in 12 vertexes
 colors = np.random.random(size=(verts.shape[0], 3, 4))
-#colors[...,3] = 1.0
-
-m2 = gl.GLMeshItem(vertexes=verts, vertexColors=colors, smooth=False, shader='balloon')
+m2 = gl.GLMeshItem(vertexes=verts, vertexColors=colors, smooth=False, shader='balloon', 
+                   drawEdges=True, edgeColor=(1, 1, 0, 1))
 m2.translate(-5, 5, 0)
 w.addItem(m2)
+
 
 
 ## Example 3:
@@ -79,7 +84,7 @@ colors[:,1] = np.linspace(0, 1, colors.shape[0])
 md.setFaceColors(colors)
 m3 = gl.GLMeshItem(meshdata=md, smooth=False)#, shader='balloon')
 
-m3.translate(-5, -5, 0)
+m3.translate(5, -5, 0)
 w.addItem(m3)
 
 
@@ -114,45 +119,6 @@ w.addItem(m6)
 
 
 
-
-def psi(i, j, k, offset=(25, 25, 50)):
-    x = i-offset[0]
-    y = j-offset[1]
-    z = k-offset[2]
-    th = np.arctan2(z, (x**2+y**2)**0.5)
-    phi = np.arctan2(y, x)
-    r = (x**2 + y**2 + z **2)**0.5
-    a0 = 1
-    #ps = (1./81.) * (2./np.pi)**0.5 * (1./a0)**(3/2) * (6 - r/a0) * (r/a0) * np.exp(-r/(3*a0)) * np.cos(th)
-    ps = (1./81.) * 1./(6.*np.pi)**0.5 * (1./a0)**(3/2) * (r/a0)**2 * np.exp(-r/(3*a0)) * (3 * np.cos(th)**2 - 1)
-    
-    return ps
-    
-    #return ((1./81.) * (1./np.pi)**0.5 * (1./a0)**(3/2) * (r/a0)**2 * (r/a0) * np.exp(-r/(3*a0)) * np.sin(th) * np.cos(th) * np.exp(2 * 1j * phi))**2 
-
-
-print("Generating scalar field..")
-data = np.abs(np.fromfunction(psi, (50,50,100)))
-
-
-#data = np.fromfunction(lambda i,j,k: np.sin(0.2*((i-25)**2+(j-15)**2+k**2)**0.5), (50,50,50)); 
-# print("Generating isosurface..")
-# verts = pg.isosurface(data, data.max()/4.)
-# print dir(gl.MeshData)
-# md = gl.GLMeshItem(vertexes=verts)
-# 
-# colors = np.ones((md.vertexes(indexed='faces').shape[0], 4), dtype=float)
-# colors[:,3] = 0.3
-# colors[:,2] = np.linspace(0, 1, colors.shape[0])
-# m1 = gl.GLMeshItem(meshdata=md, color=colors, smooth=False)
-# 
-# w.addItem(m1)
-# m1.translate(-25, -25, -20)
-# 
-# m2 = gl.GLMeshItem(vertexes=verts, color=colors, smooth=True)
-# 
-# w.addItem(m2)
-# m2.translate(-25, -25, -50)
     
 
 
